<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">Doa Pilihan</string>
    <string name="title_activity_main">@string/drawer_title_home</string>
    <string name="title_activity_detail">Doa Pilihan</string>
    <string name="title_frame_transition">title_frame_transition</string>
    <string name="drawer_title_home">Home</string>
    <string name="drawer_title_ads_setting">Ads Setting</string>
    <string name="drawer_title_about">About</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_doa_line_spacing_label">Line Spacing</string>
    <string name="dialog_doa_font_label">Font Size</string>
    <string name="dialog_doa_font_type_label">Font Type</string>
    <string name="dialog_pattern_list_label">Pattern List</string>


    <string name="library_name_1">Butter Knife</string>
    <string name="library_url_1">http://jakewharton.github.io/butterknife/</string>

    <string name="library_name_2">Android-Iconics</string>
    <string name="library_url_2">https://github.com/mikepenz/Android-Iconics</string>

    <string name="library_name_3">Calligraphy</string>
    <string name="library_url_3">https://github.com/chrisjenx/Calligraphy</string>

    <string name="library_name_4">RxAndroid</string>
    <string name="library_url_4">https://github.com/ReactiveX/RxAndroid</string>


    <string name="reference_name_1">Tanzil.net</string>
    <string name="reference_url_1">http://tanzil.net/</string>

    <string name="reference_name_2">Quran.com</string>
    <string name="reference_url_2">http://quran.com/</string>

    <string name="reference_name_3">Muslihun.com</string>
    <string name="reference_url_3">https://muflihun.com/</string>

    <string name="reference_name_4">Sunnah.com</string>
    <string name="reference_url_4">http://sunnah.com/</string>

    <string name="reference_name_5">QaalaRasulAllah.com</string>
    <string name="reference_url_5">http://qaalarasulallah.com/</string>

    <string name="reference_name_6">Islam in Quran</string>
    <string name="reference_url_6">http://www.islaminquran.com/</string>

    <string name="email_helpdesk">Doa Pilihan HelpDesk</string>
    <string name="email_intent_title">Send with</string>

    <string name="ads_setting_text">Anda boleh mematikan Iklan dengan menekan butang dibawah.\n\nIklan akan kembali apabila anda tutup dan membuka semula aplikasi ini.\n\nUntuk kekal mematikan iklan, anda boleh naik taraf applikasi ini bagi membantu pembaikan dan pembaharuan aplikasi ini yang akan dilakukan dari masa ke semasa.</string>

    <string name="ads_setting_upgrade_text">Bantu pembangunan aplikasi ini dengan menaik-taraf kepada premium.\n\nDengan menaik-taraf sekaligus akan mematikan iklan selama-lamanya.\n\nAnda juga akan mempunyai lebih pilihan penukaran Tulisan (Font) Arab.\n\nAnda juga akan mempunyai lebih pilihan Corak (Pattern) Islamik.</string>

    <string name="ads_setting_upgraded_text_1">Anda adalah pengguna Premium.\n\nTerima kasih kerana membantu dalam pembangunan aplikasi ini.</string>


    <string name="ads_setting_upgraded_text_2">جَزَاكُمُ اللهُ خَيْرًا كَثِيْرًا</string>
    <string name="ads_setting_upgraded_text_3">وَجَزَاكُمُ اللهُ اَحْسَنَ الْجَزَاء</string>

</resources>
