<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header with Logo -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_gradient"
            android:paddingBottom="50dp"
            android:paddingTop="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <!-- Application section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="APPLICATION"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Version"/>

            <!-- Email Support -->
            <RelativeLayout
                android:id="@+id/email_support"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="40dp"
                    android:clickable="true"
                    app:iiv_color="@color/md_grey_400"
                    app:iiv_icon="gmd-email"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="left|center_vertical"
                    android:text="Get Support and report bugs"/>

            </RelativeLayout>

            <!-- Libraries section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="LIBRARIES"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/library_1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/library_name_1"/>

            <TextView
                android:id="@+id/library_2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/library_name_2"/>

            <TextView
                android:id="@+id/library_3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/library_name_3"/>

            <TextView
                android:id="@+id/library_4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/library_name_4"/>

            <!-- References section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="REFERENCES"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/reference_1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/reference_name_1"/>

            <TextView
                android:id="@+id/reference_2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/reference_name_2"/>

            <TextView
                android:id="@+id/reference_3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/reference_name_3"/>

            <TextView
                android:id="@+id/reference_4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/reference_name_4"/>

            <TextView
                android:id="@+id/reference_5"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/reference_name_5"/>

            <TextView
                android:id="@+id/reference_6"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/reference_name_6"/>

            <!-- Developer section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="DEVELOPER"
                android:textColor="@color/colorPrimary"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="Muhamad Fadli bin Ishak"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>